     never used by GDB, and was added by mistake.  The unused argument
     was never documented in the GDB manual, so users should not have
     been using it.

  ** gdb.execute has an additional 'styling' argument.  When True, then
     output will be styled.  The default for this argument is True
     when output is going to standard output, and False when output is
     going to a string.

* Guile API

  ** New type <gdb:color> for dealing with colors.

  ** New constant PARAM_COLOR represents color type of a value
     of a <gdb:parameter> object.  Parameter's value is <gdb::color> instance.

* New remote packets

binary-upload in qSupported reply
  If the stub sends back 'binary-upload+' in it's qSupported reply,
  then GDB will, where possible, make use of the 'x' packet.  If the
  stub doesn't report this feature supported, then GDB will not use
  the 'x' packet.

* Changed remote packets

qXfer:threads:read
  The XML that is sent as a response can now include an "id_str"
  attribute for a thread element.  The attribute indicates what GDB
  should print as the target ID of the thread, for example in the
  "info threads" command or when switching to the thread.

* MI changes

** The =library-unloaded event now includes the 'ranges' field, which
   has the same meaning as for the =library-loaded event.

** The =library-unloaded event now includes the 'still-in-use' field.
   This field is 'true' when a library is unloaded (removed from the
   inferior's list of loaded libraries), but the mapping within the
   inferior's address space is retained, as the library was mapped
   multiple times, and the same mapping was being reused.  In all
   other cases, this field will have the value 'false'.

* Support for stabs debugging format and the a.out/dbx object format is
  deprecated, and will be removed in GDB 18.

* A new configure option was added, allowing support for the compile
  subsystem to be disabled at configure time, in the form of